--- a/Resources/Private/Templates/List.html
+++ b/Resources/Private/Templates/List.html
@@ -1,5 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       xmlns:c="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
+      xmlns:video="http://typo3.org/ns/Hn/Video/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
 <f:layout name="Default"/>
@@ -8,8 +9,8 @@
     <table class="table">
         <thead>
             <tr>
-                <th style="width: 12em">date</th>
-                <th style="width: 5em">status</th>
+                <th style="width: 12em">create date</th>
+                <th style="width: 6em">status</th>
                 <th>file</th>
                 <th>configuration</th>
                 <th style="width: 10em"></th>
@@ -18,9 +19,18 @@
         <tbody>
             <f:for each="{tasks}" as="task">
                 <tr>
-                    <td>{task.crdate -> f:format.date(format: 'l d. M Y H:i:s')}</td>
-                    <td>{task.status}</td>
-                    <td>{task.file_identifier}</td>
+                    <td>
+                        {task.crdate -> f:format.date(format: 'l d. M Y H:i:s')}
+                    </td>
+                    <td style="text-align: right">
+                        {task.status}<br />
+                        <f:if condition="{task.status} == 'new'">
+                            {video:progress(file: task.file_uid, configuration: task.configuration) -> f:format.raw()}
+                        </f:if>
+                    </td>
+                    <td>
+                        {task.file_identifier}
+                    </td>
                     <td>
                         <dl class="dl-horizontal" style="margin: 0">
                             <f:for each="{task.configuration}" as="configuration" key="key">
