--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,28 +1,13 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
-<f:be.container includeCssFiles="{}" pageTitle="hn_project">
+<f:be.container>
     <div class="module">
         <div class="module-docheader">
             <div class="typo3-docheader-functions">
                 <div class="module-docheader-bar module-docheader-bar-navigation">
                     <div class="module-docheader-bar-column-left">
                         <f:render section="TopLeft" optional="true"/>
-                        <f:if condition="{femanager:be.isConfirmationModuleActivated()}">
-                            <div class="btn-group btn-group-xs" role="group">
-                                <f:link.action action="list" class="btn btn-default{femanager:Be.GetClassNameOnAction(actionName:'list')}">
-                                    <f:translate key="BackendSelectionList">List</f:translate>
-                                </f:link.action>
-                                <f:link.action action="confirmation" class="btn btn-default{femanager:Be.GetClassNameOnAction(actionName:'confirmation')}">
-                                    <f:translate key="BackendSelectionList">Admin Confirmation</f:translate>
-                                </f:link.action>
-                                <f:if condition="{femanager:be.IsResendUserConfirmationRequestActivated()}">
-                                    <f:link.action action="listOpenUserConfirmations" class="btn btn-default{femanager:Be.GetClassNameOnAction(actionName:'listOpenUserConfirmations')}">
-                                        <f:translate key="BackendSelectionList">Open User Confirmtions</f:translate>
-                                    </f:link.action>
-                                </f:if>
-                            </div>
-                        </f:if>
                     </div>
                     <div class="module-docheader-bar-column-right">
                         <f:be.pagePath />
@@ -47,14 +32,7 @@
                 </div>
             </f:flashMessages>
 
-            <f:if condition="{notInProject}">
-                <f:then>
-                    <div class="alert alert-info">Wähle eine Seite innerhalb eines Projektes aus</div>
-                </f:then>
-                <f:else>
-                    <f:render section="Main"/>
-                </f:else>
-            </f:if>
+            <f:render section="Main"/>
         </div>
     </div>
 </f:be.container>
