--- a/Resources/Private/Templates/List.html
+++ b/Resources/Private/Templates/List.html
@@ -6,63 +6,67 @@
 <f:layout name="Default"/>
 
 <f:section name="Main">
-    <table class="table">
-        <thead>
-            <tr>
-                <th style="width: 13em">create date</th>
-                <th style="width: 6em">status</th>
-                <th>file</th>
-                <th>configuration</th>
-                <th style="width: 10em"></th>
-            </tr>
-        </thead>
-        <tbody>
-            <f:for each="{tasks}" as="task">
+
+    <div class="panel panel-default">
+        <table class="table table-striped table-hover">
+            <thead>
                 <tr>
-                    <td>
-                        {task.crdate -> f:format.date(format: 'l d. M Y')}<br>
-                        {task.crdate -> f:format.date(format: 'H:i:s')}
-                    </td>
-                    <td style="text-align: right">
-                        {task.status}<br />
-                        <f:if condition="{task.status} == 'new'">
-                            <video:progress subject="{task.uid}" />
-                        </f:if>
-                    </td>
-                    <td>
-                        {task.file_identifier}
-                    </td>
-                    <td>
-                        <dl class="dl-horizontal" style="margin: 0">
-                            <f:for each="{task.configuration}" as="configuration" key="key">
-                                <dt>{key}</dt>
-                                <dd>{configuration -> f:format.json()}</dd>
-                            </f:for>
-                        </dl>
-                    </td>
-                    <td>
-                        <div class="btn-group">
-                            <a href="#" class="btn btn-default" title="Info"
-                               onclick="top.TYPO3.InfoWindow.showItem('_FILE', {task.file_combi_ident -> f:format.json()});return false;">
-                                <c:icon identifier="actions-document-info" />
-                            </a>
-                            <f:variable name="isNew" value="{f:if(condition: '{task.status} == \'new\' && {task.lastUpdate} == 0', then: 1)}"/>
-                            <f:variable name="isFailed" value="{f:if(condition: '{task.status} == \'failed\'', then: 1)}"/>
-                            <f:variable name="isFinished" value="{f:if(condition: '{task.status} == \'finished\'', then: 1)}"/>
-                            <f:if condition="{isNew} || {isFailed} || {isFinished}">
-                                <f:form action="delete" class="btn-group">
-                                    <f:form.hidden name="task" value="{task.uid}" />
-                                    <button class="btn btn-default" title="Delete">
-                                        <c:icon identifier="actions-edit-delete" />
-                                    </button>
-                                </f:form>
-                            </f:if>
-                        </div>
-                    </td>
+                    <th style="width: 13em">create date</th>
+                    <th style="width: 6em">status</th>
+                    <th>file</th>
+                    <th>configuration</th>
+                    <th style="width: 10em"></th>
                 </tr>
-            </f:for>
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                <f:for each="{tasks}" as="task">
+                    <tr class="{f:if(condition: '{task.status} == \'failed\'', then: 'danger')}">
+                        <td>
+                            {task.crdate -> f:format.date(format: 'l d. M Y')}<br>
+                            {task.crdate -> f:format.date(format: 'H:i:s')}
+                        </td>
+                        <td style="text-align: right">
+                            {task.status}<br />
+                            <f:if condition="{task.status} == 'new'">
+                                <video:progress subject="{task.uid}" />
+                            </f:if>
+                        </td>
+                        <td>
+                            {task.file_identifier}
+                        </td>
+                        <td>
+                            <dl class="dl-horizontal" style="margin: 0">
+                                <f:for each="{task.configuration}" as="configuration" key="key">
+                                    <dt>{key}</dt>
+                                    <dd>{configuration -> f:format.json()}</dd>
+                                </f:for>
+                            </dl>
+                        </td>
+                        <td>
+                            <div class="btn-group">
+                                <a href="#" class="btn btn-default" title="Info"
+                                   onclick="top.TYPO3.InfoWindow.showItem('_FILE', {task.file_combi_ident -> f:format.json()});return false;">
+                                    <c:icon identifier="actions-document-info" />
+                                </a>
+                                <f:variable name="isNew" value="{f:if(condition: '{task.status} == \'new\' && {task.lastUpdate} == 0', then: 1)}"/>
+                                <f:variable name="isFailed" value="{f:if(condition: '{task.status} == \'failed\'', then: 1)}"/>
+                                <f:variable name="isFinished" value="{f:if(condition: '{task.status} == \'finished\'', then: 1)}"/>
+                                <f:if condition="{isNew} || {isFailed} || {isFinished}">
+                                    <f:form action="delete" class="btn-group">
+                                        <f:form.hidden name="task" value="{task.uid}" />
+                                        <button class="btn btn-default" title="Delete">
+                                            <c:icon identifier="actions-edit-delete" />
+                                        </button>
+                                    </f:form>
+                                </f:if>
+                            </div>
+                        </td>
+                    </tr>
+                </f:for>
+            </tbody>
+        </table>
+    </div>
+
 </f:section>
 
 </html>
