add a notice on the current state of error handling

--- a/Resources/Private/Templates/List.html
+++ b/Resources/Private/Templates/List.html
@@ -7,6 +7,19 @@
 
 <f:section name="Main">
 
+    <f:be.infobox title="Note on error handling">
+        Error handling is a bit of a mess right now.
+        <br>
+        The local ffmpeg implementation will never state that there is an error,
+        it'll just retry forever and get stuck, you'll need to remove the task if it never starts.
+        <br>
+        On the other hand, the CloudConvert implementation <em>caches</em> error states so if there is an error
+        you may need to truncate <code>tx_video_cloudconvert_process</code> in addition to removing the task to retry.
+        At least it doesn't get stuck on a single failing task…
+        <br>
+        I haven't had time to fix those issues yet.
+    </f:be.infobox>
+
     <div class="panel panel-default">
         <table class="table table-striped table-hover">
             <thead>
